service.yaml
kind: Service
apiVersion: v1
metadata:
  name: bigpi-service
spec:
  selector:
    app: bigpi-website
  ports:
    - port: 80
